--- a/scss/_start.scss
+++ b/scss/_start.scss
@@ -10,6 +10,13 @@
   min-width: 375px;
 }
 
+.container {
+  max-width: 1336px;
+  min-width: 345px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
 a {
   text-decoration: none;
 }
