--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,41 @@
+@font-face {
+  font-family: "Circular Std";
+  src: url("../../fonts/CircularStd-Medium.woff2") format("woff2"), url("../../fonts/CircularStd-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Sofia Pro";
+  src: url("../../fonts/SofiaProBold.woff2") format("woff2"), url("../../fonts/SofiaProBold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Sofia Pro";
+  src: url("../../fonts/SofiaProMedium.woff2") format("woff2"), url("../../fonts/SofiaProMedium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
 * {
   box-sizing: border-box;
   margin: 0;
 }
 
 .body {
-  font-family: "Sofia Pro", "Arial", sans-serif;
+  font-family: "Sofia Pro", sans-serif, "Arial";
   font-weight: 500;
   font-style: normal;
   min-width: 375px;
+  background: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(42px);
 }
 
 .container {
-  max-width: 1336px;
+  max-width: 1340px;
   min-width: 345px;
   margin: 0 auto;
   padding: 0 15px;
+  display: flex;
 }
 
 a {
@@ -37,23 +58,102 @@ a {
   height: auto;
 }
 
-@font-face {
+.header-box {
+  width: 80%;
+  margin-top: 49px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 70px;
+}
+.header-box__basket {
+  display: inline-flex;
+  padding-left: 42px;
+}
+.header-box__account {
+  display: inline-flex;
+  padding-left: 25px;
+}
+
+.logo {
+  display: block;
+}
+.logo-box {
+  width: 20%;
+  margin-top: 51px;
+}
+
+.search-wrap {
+  display: flex;
+  align-items: center;
+}
+
+.search-btn {
+  width: 24px;
+  height: 24px;
+  background-image: url("../img/search.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: transparent;
+  background-size: cover;
+  border: transparent;
+  display: inline-block;
+}
+
+.searchbar {
+  all: initial;
   font-family: "Circular Std";
-  src: url("../fonts/CircularStd-Medium.woff2") format("woff2"), url("../fonts/CircularStd-Medium.woff") format("woff");
-  font-weight: 500;
   font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 22px;
+  color: #000000;
+  opacity: 0.2;
+  margin-left: 17px;
 }
-@font-face {
-  font-family: "Sofia Pro";
-  src: url("../fonts/SofiaProBold.woff2") format("woff2"), url("../fonts/SofiaProBold.woff") format("woff");
-  font-weight: 700;
-  font-style: normal;
+
+.menu-wrap {
+  display: flex;
+  align-items: center;
 }
-@font-face {
-  font-family: "Sofia Pro";
-  src: url("../fonts/SofiaProMedium.woff2") format("woff2"), url("../fonts/SofiaProMedium.woff") format("woff");
-  font-weight: 500;
+
+.menu__list {
+  list-style: none;
+  padding-inline-start: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 42px;
+  position: relative;
+}
+.menu__item {
+  font-family: "Circular Std";
   font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 22px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.menu__item::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 29px;
+  width: 100%;
+  height: 2px;
+  background-color: #000000;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+.menu__item:hover::after {
+  opacity: 1;
+}
+.menu__link {
+  color: #000000;
+}
+
+.sidebar {
+  width: 20%;
 }
 
 /*# sourceMappingURL=style.css.map */
