--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,3 @@
-@import "start";
-@import "variables";
-@import "fonts";
+@import "./common";
+@import "./components/header";
+@import "./components/sidebar";
