--- a/scss/components/header/_header.scss
+++ b/scss/components/header/_header.scss
@@ -9,11 +9,17 @@
     &__basket {
       display: inline-flex;
       padding-left: 42px;
+      &:hover path {
+        fill: $icon-color;
+      }
     }
 
     &__account {
       display: inline-flex;
       padding-left: 25px;
+      &:hover path {
+        fill: $icon-color;
+      }
     }
   }
 }
