--- a/scss/common/_variables.scss
+++ b/scss/common/_variables.scss
@@ -1,6 +1,7 @@
 $default-font: "Sofia Pro", sans-serif;
 $content-width: 1340px;
 $font-color: #000000;
+$icon-color: #F4DE4D;
 
 
 $breakpoint-xxl: 1200px;
