--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ a {
 }
 
 .header-box {
-  width: 80%;
+  width: 84%;
   margin-top: 49px;
   display: flex;
   justify-content: space-between;
@@ -84,7 +84,7 @@ a {
   display: block;
 }
 .logo-box {
-  width: 20%;
+  width: 16%;
   margin-top: 51px;
 }
 
@@ -160,7 +160,7 @@ a {
 }
 
 .sidebar {
-  width: 20%;
+  width: 16%;
   margin-top: 57px;
 }
 .sidebar-title {
@@ -221,12 +221,11 @@ a {
 }
 
 .footer {
-  margin-top: 316px;
   margin-bottom: 60px;
 }
 
 .help-box {
-  width: 20%;
+  width: 16%;
   display: flex;
   align-items: center;
 }
@@ -256,6 +255,89 @@ a {
   line-height: 24px;
   color: #000000;
   margin-left: 17px;
+}
+
+.store {
+  width: 84%;
+}
+.store-wrap {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+.store-wrap:nth-child(even) {
+  flex-direction: row-reverse;
+}
+.store-box {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.store__item {
+  width: 539px;
+  height: 180px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 15px;
+  position: relative;
+}
+.store__item-pic {
+  border-radius: 15px;
+}
+.store__item.item1 {
+  background-color: #BCE7F0;
+}
+.store__item-title {
+  z-index: 1;
+  font-family: "Sofia Pro", sans-serif;
+  font-style: normal;
+  font-weight: 800;
+}
+.store__item-title.sale-title {
+  font-size: 30px;
+  line-height: 47px;
+  text-transform: uppercase;
+  position: absolute;
+  top: 37%;
+  left: 24%;
+}
+.store__item-title.trend-title {
+  font-size: 26px;
+  line-height: 40px;
+  top: 62px;
+  left: 30px;
+  position: absolute;
+}
+.store__item-title.trend-title.title1 {
+  color: #001AA2;
+}
+.store__item-title.trend-title.title2 {
+  color: #FD2E24;
+}
+.store__item-text {
+  font-family: "Sofia Pro", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 23px;
+  color: #000000;
+  position: absolute;
+  top: 105px;
+  left: 30px;
+}
+
+.cards {
+  display: flex;
+  gap: 20px;
+}
+.cards__item {
+  width: 259px;
+  height: 380px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.cards__item-pic {
+  border-radius: 15px;
 }
 
 /*# sourceMappingURL=style.css.map */
