--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,3 +2,5 @@
 @import "./components/header";
 @import "./components/sidebar";
 @import "./components/footer";
+@import "./components/store-section";
+@import "./components/cards";
