--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ a {
 }
 
 .header-box {
-  width: 84%;
+  flex-grow: 1;
   margin-top: 49px;
   display: flex;
   justify-content: space-between;
@@ -162,6 +162,7 @@ a {
 .sidebar {
   width: 16%;
   margin-top: 57px;
+  position: relative;
 }
 .sidebar-title {
   font-family: "Sofia Pro", sans-serif;
@@ -225,9 +226,10 @@ a {
 }
 
 .help-box {
-  width: 16%;
   display: flex;
   align-items: center;
+  position: absolute;
+  bottom: 10px;
 }
 .help-box__btn {
   width: 48px;
@@ -258,7 +260,7 @@ a {
 }
 
 .store {
-  width: 84%;
+  flex-grow: 1;
 }
 .store-wrap {
   display: flex;
@@ -335,9 +337,24 @@ a {
   height: 380px;
   background-size: cover;
   background-repeat: no-repeat;
+  position: relative;
 }
 .cards__item-pic {
   border-radius: 15px;
+}
+
+.like-icon {
+  width: 38px;
+  height: 38px;
+  position: absolute;
+  background-color: #FFFFFF;
+  background-image: url("../img/heart.png");
+  border-radius: 50%;
+  top: 20px;
+  right: 22px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
