--- a/scss/components/cards/_cards.scss
+++ b/scss/components/cards/_cards.scss
@@ -7,10 +7,24 @@
     height: 380px;
     background-size: cover;
     background-repeat: no-repeat;
+    position: relative;
 
     &-pic {
       border-radius: 15px;
-
     }
   }
+}
+
+.like-icon {
+  width: 38px;
+  height: 38px;
+  position: absolute;
+  background-color: #FFFFFF;
+  background-image: url("../img/heart.png");
+  border-radius: 50%;
+  top: 20px;
+  right: 22px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  cursor: pointer;
 }
