--- a/scss/common/_variables.scss
+++ b/scss/common/_variables.scss
@@ -4,7 +4,6 @@ $font-color: #000000;
 $icon-color: #F4DE4D;
 
 
-$breakpoint-xxl: 1200px;
-$breakpoint-xl: 1024px;
-$breakpoint-md: 767px;
-$breakpoint-sm: 576px;
+$breakpoint-l: 1024px;
+$breakpoint-md: 768px;
+$breakpoint-sm: 425px;
