--- a/css/style.css
+++ b/css/style.css
@@ -25,14 +25,14 @@
   font-family: "Sofia Pro", sans-serif, "Arial";
   font-weight: 500;
   font-style: normal;
-  min-width: 375px;
+  min-width: 395px;
   background: rgba(255, 255, 255, 0.8);
   backdrop-filter: blur(42px);
 }
 
 .container {
   max-width: 1340px;
-  min-width: 345px;
+  min-width: 395px;
   margin: 0 auto;
   padding: 0 15px;
   display: flex;
@@ -58,6 +58,16 @@ a {
   height: auto;
 }
 
+.stop-scroll {
+  overflow: hidden;
+  height: 100%;
+}
+
+@media (max-width: 425px) {
+  .container {
+    display: block;
+  }
+}
 .header-box {
   flex-grow: 1;
   margin-top: 49px;
@@ -123,6 +133,9 @@ a {
   align-items: center;
 }
 
+.menu__overlay, .menu__burger {
+  display: none;
+}
 .menu__list {
   list-style: none;
   padding-inline-start: 0;
@@ -159,6 +172,152 @@ a {
   color: #000000;
 }
 
+@media (max-width: 1024px) {
+  .menu__list {
+    gap: 32px;
+  }
+}
+@media (max-width: 768px) {
+  .header-box {
+    margin-bottom: 30px;
+    display: block;
+  }
+  .search-wrap {
+    justify-content: flex-end;
+    margin-bottom: 25px;
+  }
+  .menu-wrap {
+    justify-content: flex-end;
+  }
+}
+@media (max-width: 425px) {
+  .header-box {
+    flex-grow: 0;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+  .logo-box {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 25px;
+  }
+  .menu-wrap {
+    margin-top: 20px;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+  .menu__overlay {
+    display: block;
+    position: fixed;
+    top: 65px;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #FFFFFF;
+    opacity: 0;
+    visibility: hidden;
+    cursor: pointer;
+    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  }
+  .menu__overlay.show {
+    opacity: 1;
+    visibility: visible;
+  }
+  .menu__list {
+    position: fixed;
+    top: 190px;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease-in-out;
+    gap: 15px;
+  }
+  .menu .show {
+    transform: translateX(0);
+    z-index: 2;
+  }
+  .menu .show .active {
+    color: #F6F6F6;
+  }
+  .menu__item {
+    padding: 7px 0px;
+    background-color: #F6F6F6;
+    border-radius: 12px;
+    margin: 0 15px;
+    width: 93%;
+    text-align: center;
+  }
+  .menu__item::after {
+    left: 96px;
+    top: 34px;
+    width: 49%;
+  }
+  .menu__link {
+    display: block;
+    font-size: 22px;
+    line-height: 30px;
+  }
+  .menu__burger {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
+    background-color: transparent;
+    border: transparent;
+    border-radius: 8px;
+  }
+  .menu__burger:active {
+    background-color: #F4DE4D;
+  }
+  .menu__burger-line {
+    width: 18px;
+    height: 2px;
+    background-color: black;
+    transition: all 0.3s ease-in-out;
+    display: inline-flex;
+  }
+  .menu__burger-line::before, .menu__burger-line::after {
+    content: "";
+    position: absolute;
+    width: 18px;
+    height: 2px;
+    background-color: black;
+    transition: all 0.3s ease-in-out;
+  }
+  .menu__burger-line::before {
+    transform: translateY(-6px);
+  }
+  .menu__burger-line::after {
+    transform: translateY(6px);
+  }
+  .menu__burger.show .menu__burger-line {
+    transform: translateX(-18px);
+    background: transparent;
+  }
+  .menu__burger.show .menu__burger-line::before {
+    transform: rotate(45deg) translate(13px, -13px);
+  }
+  .menu__burger.show .menu__burger-line::after {
+    transform: rotate(-45deg) translate(13px, 13px);
+  }
+  .search-wrap {
+    justify-content: flex-start;
+    margin-bottom: 5px;
+  }
+}
 .sidebar {
   width: 16%;
   margin-top: 57px;
@@ -221,6 +380,22 @@ a {
   background-image: url("../img/diamond.svg");
 }
 
+@media (max-width: 1024px) {
+  .sidebar {
+    width: 22%;
+    margin-top: 0;
+  }
+}
+@media (max-width: 768px) {
+  .sidebar {
+    display: none;
+  }
+}
+@media (max-width: 425px) {
+  .sidebar {
+    display: none;
+  }
+}
 .footer {
   margin-bottom: 60px;
 }
@@ -259,6 +434,27 @@ a {
   margin-left: 17px;
 }
 
+@media (max-width: 1024px) {
+  .help-box {
+    bottom: 15px;
+  }
+  .help-box__link {
+    margin-left: 8px;
+  }
+}
+@media (max-width: 768px) {
+  .help-box {
+    position: static;
+  }
+  .help-box__link {
+    margin-left: 8px;
+  }
+}
+@media (max-width: 425px) {
+  .help-box {
+    position: static;
+  }
+}
 .store {
   flex-grow: 1;
 }
@@ -276,17 +472,12 @@ a {
   gap: 20px;
 }
 .store__item {
-  width: 539px;
-  height: 180px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-radius: 15px;
   position: relative;
 }
 .store__item-pic {
   border-radius: 15px;
 }
-.store__item.item1 {
+.store__item-pic.pic-1 {
   background-color: #BCE7F0;
 }
 .store__item-title {
@@ -328,13 +519,78 @@ a {
   left: 30px;
 }
 
+@media (max-width: 1024px) {
+  .store-box {
+    gap: 13px;
+  }
+  .store__item-title.sale-title {
+    font-size: 25px;
+    top: 33%;
+    left: 25%;
+  }
+  .store__item-title.trend-title {
+    font-size: 21px;
+    top: 39px;
+    left: 21px;
+  }
+  .store__item-text {
+    font-size: 13px;
+    top: 74px;
+    left: 21px;
+  }
+}
+@media (max-width: 768px) {
+  .store__item-title.sale-title {
+    top: 28%;
+    left: 21%;
+  }
+  .store__item-title.sale-title {
+    font-size: 23px;
+    top: 31%;
+    left: 23%;
+  }
+  .store__item-title.trend-title {
+    font-size: 18px;
+    top: 30px;
+    left: 15px;
+  }
+  .store__item-text {
+    font-size: 12px;
+    top: 64px;
+    left: 15px;
+  }
+}
+@media (max-width: 425px) {
+  .store {
+    flex-grow: 0;
+  }
+  .store-box {
+    gap: 20px;
+  }
+  .store-wrap {
+    display: block;
+  }
+  .store__item-title.sale-title {
+    font-size: 23px;
+    top: 31%;
+    left: 23%;
+  }
+  .store__item-title.trend-title {
+    font-size: 19px;
+    top: 33px;
+    left: 17px;
+  }
+  .store__item-text {
+    font-size: 12px;
+    top: 70px;
+    left: 17px;
+  }
+}
 .cards {
   display: flex;
   gap: 20px;
 }
 .cards__item {
-  width: 259px;
-  height: 380px;
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
@@ -355,6 +611,34 @@ a {
   background-repeat: no-repeat;
   background-position: center center;
   cursor: pointer;
+}
+
+@media (max-width: 1024px) {
+  .like-icon {
+    width: 33px;
+    height: 33px;
+    top: 15px;
+    right: 11px;
+  }
+}
+@media (max-width: 768px) {
+  .like-icon {
+    width: 30px;
+    height: 30px;
+    top: 10px;
+    right: 10px;
+  }
+}
+@media (max-width: 425px) {
+  .cards {
+    margin-top: 20px;
+  }
+  .like-icon {
+    width: 27px;
+    height: 27px;
+    top: 13px;
+    right: 12px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
