--- a/scss/components/cards/_cards.scss
+++ b/scss/components/cards/_cards.scss
@@ -3,8 +3,6 @@
   gap: 20px;
 
   &__item {
-    width: 259px;
-    height: 380px;
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
@@ -27,4 +25,35 @@
   background-repeat: no-repeat;
   background-position: center center;
   cursor: pointer;
+}
+
+@include laptop {
+  .like-icon {
+    width: 33px;
+    height: 33px;
+    top: 15px;
+    right: 11px;
+  }
+}
+
+@include tablet {
+  .like-icon {
+    width: 30px;
+    height: 30px;
+    top: 10px;
+    right: 10px;
+  }
+}
+
+@include mobile {
+  .cards {
+    margin-top: 20px;
+  }
+
+  .like-icon {
+    width: 27px;
+    height: 27px;
+    top: 13px;
+    right: 12px;
+  }
 }
