--- a/scss/components/header/_header-media.scss
+++ b/scss/components/header/_header-media.scss
@@ -1,11 +1,188 @@
-@include tablet {
-
-}
-
 @include laptop {
-
+  .menu {
+    &__list {
+      gap: 32px;
+    }
+  }
 }
 
-@include desktop {
+@include tablet {
+  .header {
+    &-box {
+      margin-bottom: 30px;
+      display: block;
+    }
+  }
 
+  .search-wrap {
+    justify-content: flex-end;
+    margin-bottom: 25px;
+  }
+
+  .menu {
+    &-wrap {
+      justify-content: flex-end;
+    }
+  }
 }
+
+@include mobile {
+  .header {
+    &-box {
+      flex-grow: 0;
+      margin-top: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      margin-bottom: 20px;
+    }
+  }
+
+  .logo {
+    &-box {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      margin-top: 25px;
+    }
+  }
+
+  .menu {
+    &-wrap {
+      margin-top: 20px;
+      justify-content: space-between;
+      align-items: flex-end;
+    }
+
+    &__overlay {
+      display: block;
+      position: fixed;
+      top: 65px;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #FFFFFF;
+      opacity: 0;
+      visibility: hidden;
+      cursor: pointer;
+      transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+    }
+
+    &__overlay.show {
+      opacity: 1;
+      visibility: visible;
+    }
+
+    &__list {
+      position: fixed;
+      top: 190px;
+      left: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      width: 100%;
+      transform: translateX(-100%);
+      transition: transform 0.3s ease-in-out;
+      gap: 15px;
+    }
+
+    & .show {
+      transform: translateX(0);
+      z-index: 2;
+
+      & .active {
+        color: #F6F6F6;
+      }
+    }
+
+    &__item {
+      padding: 7px 0px;
+      background-color: #F6F6F6;
+      border-radius: 12px;
+      margin: 0 15px;
+      width: 93%;
+      text-align: center;
+
+      &::after {
+        left: 96px;
+        top: 34px;
+        width: 49%;
+      }
+    }
+
+    &__link {
+      display: block;
+      font-size: 22px;
+      line-height: 30px;
+    }
+
+    &__burger {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 32px;
+      height: 32px;
+      cursor: pointer;
+      background-color: transparent;
+      border: transparent;
+      border-radius: 8px;
+
+      &:active {
+        background-color: #F4DE4D;
+      }
+    }
+
+    &__burger-line {
+      width: 18px;
+      height: 2px;
+      background-color: black;
+      transition: all 0.3s ease-in-out;
+      display: inline-flex;
+    }
+
+    &__burger-line::before,
+    &__burger-line::after {
+      content: "";
+      position: absolute;
+      width: 18px;
+      height: 2px;
+      background-color: black;
+      transition: all 0.3s ease-in-out;
+    }
+
+    &__burger-line::before {
+      transform: translateY(-6px);
+    }
+
+    &__burger-line::after {
+      transform: translateY(6px);
+    }
+
+    &__burger.show &__burger-line {
+      transform: translateX(-18px);
+      background: transparent;
+    }
+
+    &__burger.show &__burger-line::before {
+      transform: rotate(45deg) translate(13px, -13px);
+    }
+
+    &__burger.show &__burger-line::after {
+      transform: rotate(-45deg) translate(13px, 13px);
+    }
+  }
+
+  .search-wrap {
+    justify-content: flex-start;
+    margin-bottom: 5px;
+  }
+}
+
+
+
+
+
