--- a/scss/components/footer/_footer.scss
+++ b/scss/components/footer/_footer.scss
@@ -1,12 +1,12 @@
 .footer {
-  margin-bottom: 60px;
+  padding-bottom: 40px;
 }
 
 .help-box {
   display: flex;
   align-items: center;
   position: absolute;
-  bottom: 10px;
+  bottom: 60px;
 
   &__btn {
     width: 48px;
@@ -33,7 +33,7 @@
     font-family: $default-font;
     font-style: normal;
     font-weight: 400;
-    font-size: 15.7099px;
+    font-size: 16px;
     line-height: 24px;
     color: $font-color;
     margin-left: 17px;
@@ -42,7 +42,7 @@
 
 @include laptop {
   .help-box {
-    bottom: 15px;
+    bottom: 60px;
     &__link {
       margin-left: 8px;
     }
@@ -59,8 +59,8 @@
 }
 
 @include mobile {
-  .help-box {
-    position: static;
+  .footer {
+    padding-bottom: 0;
   }
 }
 
