--- a/scss/components/header/_header.scss
+++ b/scss/components/header/_header.scss
@@ -56,7 +56,7 @@
 
 .searchbar {
   all: initial;
-  font-family: 'Circular Std';
+  font-family: 'Circular Std', "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -87,7 +87,7 @@
   }
 
   &__item {
-    font-family: 'Circular Std';
+    font-family: 'Circular Std', "Arial", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 17px;
